# SP-Software

./: .gitignore  Cargo.toml  LICENSE  README.md
leds/: Cargo.toml
leds/src/: main.rs
motor_testing/: Cargo.toml
motor_testing/src/: main.rs
src/: main.rs  util.rs  vision.rs
src/missions/: gate.rs
