[package]
name = "SP-Software"
version = "0.1.0"
edition = "2024"

[dependencies]
sw8s_rust = { git = "https://github.com/ncsurobotics/SW8S-Rust.git", version = "0.1.0" }
sw9s = { git = "https://github.com/ncsurobotics/SW9S.git", version = "0.1.0", default-features = false, features = ["comms"] }
tokio = "1.49.0"
